--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,4 +1,11 @@
-.box {
-    height: 100px;
-    background-color: var(--bs-primary);
+.index {
+  /* ------------------------------------ */
+  .arrow path {
+    fill: #000000;
+  }
+  /* ------------------------------------ */
+  .s6 {
+    height: 876px;
+  }
 }
+
