[Configure] set up basic settings included fonts and spacers

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,3 +1,13 @@
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+
+a {
+  text-decoration: none;
+}
+
 *, *::before, *::after {
   font-size: 1rem !important;
   font-weight: 400 !important;
