--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -18,7 +18,7 @@
 
 // Layout & components
 @import "./root";
-@import "./reboot";
+@import "../../node_modules/bootstrap/scss/reboot";
 @import "./type";
 @import "../../node_modules/bootstrap/scss/images";
 @import "../../node_modules/bootstrap/scss/containers";
@@ -60,6 +60,3 @@
 
 @import "./components/icons";
 @import "./components/background";
-@import "./components/swiper";
-
-@import "./mixins/gradients";
