--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -40,7 +40,7 @@
     <li class="mt-auto">
       <div class="d-flex align-items-center gap-4">
         <div class="ratio ratio-1x1" style="width: 40px;">
-          <img src="../assets/images/andychen.jpeg" alt="user-avatar" class="object-fit-cover rounded-circle">
+          <img src="../assets/images/andychen.jpeg" alt="user's avatar" class="object-fit-cover rounded-circle">
         </div>
         <div>
           <span class="d-block text-dark">Andy Chen</span>
