[update] improved the position of side bar

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,4 @@
-<nav class="nav-sidebar-bg sticky-start py-8 px-8">
+<nav class="nav-sidebar-bg sticky-top py-8 px-8">
   <ul class="list-unstyled h-100 d-flex flex-column">
     <li class="mb-8"><a href="#"><img src="../assets/images/logo-ANSWER.svg" alt=""></a></li>
     <li class="mb-6">
