[Update] fixed the padding of the brand of the side bar

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,6 +1,10 @@
 <nav class="nav-sidebar-bg sticky-top">
   <ul class="list-unstyled h-100 d-flex flex-column py-8">
-    <li class="align-self-center mb-8"><a href="#"><img src="../assets/images/logo-ANSWER.svg" alt=""></a></li>
+    <li class="mb-8 px-8">
+      <a href="#">
+        <img src="../assets/images/logo-ANSWER.svg" alt="">
+      </a>
+    </li>
     <li class="mb-6">
       <a href="#" class="link-sidebar text-dark d-flex align-items-center gap-4 py-1 px-8">
         <span class="material-icons fs-11">assessment</span>
