--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -304,8 +304,8 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $white; //$gray-100 !default;
-$dark:          $black; //$gray-900 !default;
+$light:         $gray-100 !default;
+$dark:          $gray-900 !default;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
