[Fix] fixed the padding of the user-pfp

--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -42,7 +42,7 @@
       </a>
     </li>
     <li class="mt-auto">
-      <div class="d-flex align-items-center gap-4">
+      <div class="d-flex align-items-center gap-4 px-8">
         <div class="user-pfp ratio ratio-1x1">
           <img src="../assets/images/andychen.jpeg" alt="user's avatar" class="object-fit-cover rounded-circle">
         </div>
